# docs/swagger.yaml
@@ -8,11 +8,15 @@ definitions:
       agentUUID:
         default: 5610eb3154c742d4bc95ce9194166ac4
         type: string
+      files:
+        items:
+          type: string
+        type: array
       procedureID:
         default: P_PrivilegeEscalation_0001
         type: string
     type: object
-host: uskawjdu.iptime.org
+host: httpsbas.com:8002
 info:
   contact:
     email: support@swagger.io
